2006-12-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Ops.R ("Arith" etc): move almost all "Ops" methods to new R
	file; start using "Logic", hence

	* DESCRIPTION (Depends): R >= 2.4.1 (since we want "Logic")
	* NAMESPACE: import and export "Logic"

2006-12-27  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/zpotfr.f and dependencies: use LAPACK 3.1 version
	only needed previously to R version 2.5.0.
	
2006-12-26  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Date, Version): 0.9975-8, ready for release

	* R/Tsparse.R (replTmat): fix subassignment of triangular
	* R/Csparse.R (replCmat): ditto
	* tests/indexing.R: more tests, incl the above fix

2006-12-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Auxiliaries.R (drop0): extend for non CSparse
	* R/Auxiliaries.R (diagU2N): should work for all sparseMatrix

	* src/Csparse.c (Csparse_to_Tsparse, Csparse_general_to_symmetric):
		use uplo correctly (!); other places: use uplo_P() macro

	* R/Csparse.R (replCmat): call diagU2N() when needed
	* R/Tsparse.R (replTmat): ditto

	* src/dtCMatrix.c (tCMatrix_validate): new
	* src/dtTMatrix.c (tTMatrix_validate): new, used in
	* R/AllClass.R: for validity of dtC, dsC, and dtT, dsT.

	* R/diagMatrix.R (replDiag): to use in [<-

2006-12-22  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Auxiliaries.R (as_Csparse2, as_geSimpl): new functions;
		also more general diagU2N().

2006-12-21  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/bind2.R: new file for all cbind2(), rbind() methods moved here
	from R/<foo>Matrix.R files. Better diagonal & improved sparse methods.

2006-12-20  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/bind.R: a few more cases
	* R/Auxiliaries.R (.M.kind): also work for atomic vectors

	* R/denseMatrix.R (cbind2/rbind2): moved here (and generalized) from
	* R/ddenseMatrix.R (cbind2/rbind2)
	* R/Tsparse.R (replTmat): final(?!) fix for "[<-" ..
	* tests/indexing.R