@@ -1,3 +1,7 @@
+2007-01-05  Douglas Bates  <bates@stat.wisc.edu>
+
+	* src/init.c (R_init_Matrix): export cholmod_scale
+
 2006-12-28  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* R/Ops.R ("Arith" etc): move almost all "Ops" methods to new R
